--- a/ServiceTests/app.config
+++ b/ServiceTests/app.config
@@ -1,16 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_IService" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost:6970/Service.svc" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IService" contract="ServiceReference1.IService"
-                name="BasicHttpBinding_IService" />
-        </client>
+        <bindings />
+        <client />
 
       <behaviors>
         <serviceBehaviors>
